# HashLab

./: .gitignore  .gitmodules  CMakeLists.txt  report.ipynb
02_HashTables/: CMakeLists.txt  README.md
02_HashTables/include/HashTables/: Interface.hpp
02_HashTables/include/HashTables/Benchmark/: Benchmark.hpp  Benchmark.ipp  Random.hpp  Timer.hpp
02_HashTables/include/HashTables/HashTables/OpenAddressing/: OpenAddressing.ipp  Runs.ipp
02_HashTables/include/HashTables/HashTables/SeparateChaining/: SeparateChaining.hpp
02_HashTables/include/HashTables/Hashes/: HashCollection.hpp  HashCollection.ipp
02_HashTables/include/HashTables/OpenAddressing/: OpenAddressing.hpp  OpenAddressing.ipp  Runs.ipp
02_HashTables/include/HashTables/SeparateChaining/: Bucket.h  HashTable.h  HashTableIterator.h  Node.h  Value.h  c_HashTable.h
02_HashTables/modules/: CMakeLists.txt
02_HashTables/results/Cuckoo/: Number_TabulationHash.csv
02_HashTables/results/OpenDoubleHashing/: Number_TabulationHash.csv
02_HashTables/results/OpenLinear/: Number_Indep2PolyHash.csv  Number_Indep3PolyHash.csv  String_RabinKarpHash.csv  String_Sha256Hash.csv
02_HashTables/results/OpenQuadratic/: Number_Indep2PolyHash.csv  Number_Indep3PolyHash.csv  Number_TabulationHash.csv
02_HashTables/results/SeparateChaining75/: Number_Indep2PolyHash.csv  Number_TabulationHash.csv  String_RabinKarpHash.csv
02_HashTables/results/SeparateChaining95/: Number_Murmur3Hash.csv  String_RabinKarpHash.csv  String_StdHash.csv
02_HashTables/results/__old/: OpenAddressingLinear_Number_Md5Hash.csv  OpenAddressingLinear_Number_Sha256Hash.csv  OpenAddressingLinear_Number_ShortPolyHash.csv  OpenAddressingLinear_Number_TabulationHash.csv  OpenAddressingLinear_String_DumbHash.csv  OpenAddressingLinear_String_Md5Hash.csv  OpenAddressingLinear_String_RabinKarpHash.csv  OpenAddressingQuadratic_Number_StdHash.csv  OpenLinear_Number_Indep2PolyHash.csv  OpenLinear_Number_Indep5PolyHash.csv  SeparateChaining_Number_Md5Hash.csv  SeparateChaining_Number_Murmur3Hash.csv  SeparateChaining_Number_Sha256Hash.csv  SeparateChaining_String_Murmur3Hash.csv  SeparateChaining_String_RabinKarpHash.csv  SeparateChaining_String_Sha256Hash.csv
02_HashTables/src/: Random.cpp  main.cpp
02_HashTables/src/Benchmark/: Benchmark.cpp  CMakeLists.txt  Random.cpp  Timer.cpp
02_HashTables/src/HashTables/: CMakeLists.txt
02_HashTables/src/Hashes/: CMakeLists.txt  DumbHash.cpp  HashCollection.cpp  Md5Hash.cpp  Sha256Hash.cpp
02_HashTables/src/OpenAddressing/: CMakeLists.txt
include/HashTables/: Interface.hpp  Random.hpp
include/HashTables/Benchmark/: Benchmark.hpp
include/HashTables/HashTables/: HashTables.hpp
include/HashTables/HashTables/Cuckoo/: Cuckoo.hpp  Cuckoo.ipp
include/HashTables/HashTables/OpenAddressing/: OpenAddressing.hpp
include/HashTables/HashTables/SeparateChaining/: SeparateChaining.ipp
modules/hash-library/: md5.cpp  sha256.cpp
results/Cuckoo/: Number_Indep2PolyHash.csv  Number_Indep3PolyHash.csv  Number_Indep5PolyHash.csv  String_RabinKarpHash.csv
results/OpenDoubleHashing/: Number_Indep2PolyHash.csv  Number_Indep3PolyHash.csv  Number_Indep5PolyHash.csv
results/OpenLinear/: Number_Indep5PolyHash.csv  Number_Md5Hash.csv  Number_Murmur3Hash.csv  Number_Sha256Hash.csv  Number_StdHash.csv  Number_TabulationHash.csv  String_DumbHash.csv  String_Md5Hash.csv  String_Murmur3Hash.csv  String_StdHash.csv
results/OpenQuadratic/: Number_Indep5PolyHash.csv
results/SeparateChaining75/: Number_Indep3PolyHash.csv  Number_Indep5PolyHash.csv  Number_Murmur3Hash.csv  Number_StdHash.csv  String_DumbHash.csv  String_Murmur3Hash.csv  String_StdHash.csv
results/SeparateChaining95/: Number_Indep5PolyHash.csv  String_DumbHash.csv  String_Murmur3Hash.csv
results/__old/: OpenAddressingLinear_Number_LongPolyHash.csv  OpenAddressingLinear_Number_Murmur3Hash.csv  OpenAddressingLinear_Number_StdHash.csv  OpenAddressingLinear_String_Murmur3Hash.csv  OpenAddressingLinear_String_Sha256Hash.csv  OpenAddressingLinear_String_StdHash.csv  OpenLinear_Number_Indep3PolyHash.csv  SeparateChaining_Number_Indep2PolyHash.csv  SeparateChaining_Number_Indep3PolyHash.csv  SeparateChaining_Number_Indep5PolyHash.csv  SeparateChaining_Number_StdHash.csv  SeparateChaining_Number_TabulationHash.csv  SeparateChaining_String_DumbHash.csv  SeparateChaining_String_Md5Hash.csv  SeparateChaining_String_StdHash.csv
src/Hashes/: CMakeLists.txt
